<package>
  <name>argus-camera-node</name>
  <version>0.0.1</version>
  <description>
    A ROS camera driver that uses argus to connect to
    MIPI cameras on Jetson TX2.
  </description>
  <license>BSD</license>
  <maintainer email="avarfolomeev@voxelmaps.com">Anton Varfolomeev</maintainer>
  <author email="avarfolomeev@voxelmaps.com">Anton Varfolomeev</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libgstreamer1.0-dev</build_depend>
  <build_depend>libgstreamer-plugins-base1.0-dev</build_depend>

  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>
  <build_depend>camera_info_manager</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>camera_calibration_parsers</run_depend>
  <run_depend>camera_info_manager</run_depend>

</package>

